# bp7eval

./: .gitignore  Dockerfile  README.md  build.sh  docker-build.sh  docker-run.sh  eval.sh
bp7go-v0.1/: benchmark.go
bp7go-v0.1/wasm/: build-wasm.sh  serve.go
bp7go-v0.2/: benchmark.go
bp7go-v0.2/wasm/: index.html
bp7wasm/: .gitignore  Cargo.toml  run_bench-mac.sh  run_bench.sh  wasm-build.sh
bp7wasm/src/: main.rs
eval/: bp7eval.ipynb  output2csv.sh
storagetest/: bench_storage_compressed.html  bench_storage_plain.html  benchmark.js  bp7.js  run_bench_compressed.sh  run_bench_plain.sh
